# ADAS_v2

./: README.md  face_tracker_test.py  face_tracker_xl430_06_14.py  local.py  main.py  motor_test.py  mp3_player.py  pyproject.toml
test/: face_tracker_test.py  motor_test.py
utils/: aruco_marker_gen.py  generate_apriltags.py
