[project]
name = "adas-project"
version = "0.1.0"
description = "Camera, YOLO, and Dynamixel tracking scripts for an ADAS project."
requires-python = ">=3.10,<3.13"
dependencies = [
    "dynamixel-sdk>=3.7.31",
    "flask>=3.0",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
]

[tool.uv]
package = false
