[project]
name = "adas-project"
version = "0.1.0"
description = "Camera, YOLO, and Dynamixel tracking scripts for an ADAS project."
requires-python = ">=3.10,<3.11"
dependencies = [
    "dynamixel-sdk==4.0.5",
    "flask>=3.0",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "ultralytics==8.4.72",
]

[tool.uv]
package = false
